# constellations

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
constellations/: __main__.py  client.py  config.py  main.py  server.py
example_collection/: download.yml  share.yml
tests/: test_main.py
